[package]
name = "cpm86_tools"
version = "0.1.0"
edition = "2024"
authors = ["Mathias Olsson"]

[dependencies]
anyhow = "1.0.99"
binrw = "0.15.0"
clap = {version = "4.5.45", features = ["derive","cargo"]} 
num_enum = "0.7.4"

[[bin]]
name = "cpm86_tools"
path = "src/tools/main.rs"

[[bin]]
name = "bin2cmd"
path = "src/bin2cmd/main.rs"
